# agent_learning

./: .gitignore  README.md  README_ZH.md  STYLES.md  book-en.toml  book.toml  index.html  pyproject.toml  root-index.html  serve.sh
.github/workflows/: deploy.yml
book/: 404.html  index.html  part1.html  part2.html  part3.html  part4.html  part5.html  part6.html  preface.html  print.html  searcher-c2a407aa.js  searcher.js  toc.html  toc.js
book/animations/: function_calling.html  index.html  pta_cycle.html  rag_flow.html
book/appendix/: faq.html  glossary.html  kl_divergence.html  prompt_templates.html  resources.html
book/chapter_agentic_rl/: 01_agentic_rl_overview.html  02_sft_lora.html  03_grpo.html  03_ppo.html  04_dpo.html  04_reward_design.html  05_grpo.html  05_practice_training.html  06_practice_training.html  07_latest_research.html  index.html
book/chapter_coding_agent/: 01_architecture.html  02_code_understanding.html  03_code_generation.html  04_testing_debugging.html  05_full_implementation.html  index.html
book/chapter_context_engineering/: 01_context_vs_prompt.html  02_context_window.html  03_long_horizon.html  04_practice_context_builder.html  index.html  (+1 more)
hello_agent/: agent.py  long_term_memory.py  main.py  personal_assistant.py  tools.py
scripts/: translate_svg.py
src/: SUMMARY.md  part1.md  part2.md  part3.md  part4.md  part5.md
theme/: head.hbs
zhihu_blog/: agentic_rl_zhihu.md  agentic_rl_zhihu_final.md  agentic_rl_zhihu_ready.md  concat_chapters.py  convert_to_zhihu.py  convert_to_zhihu_auto.py  svg_render.html  svg_to_html.py
(+552 files in other folders)
